Merger with released code

--- a/external/io_pio2/Makefile
+++ b/external/io_pio2/Makefile
@@ -23,10 +23,10 @@ FC              = $(DM_FC)
 
 OBJS    = wrf_data_pio.o pio_routines.o wrf_io.o field_routines.o read_bdy_routines.o module_wrfsi_static.o
 
-PIOPATH = /glade/u/home/huangwei/mysw/pio2
-#PIOPATH = /glade/u/apps/ch/opt/pio/2.2/mpt/2.15f/intel/17.0.1
+#PIOPATH = /glade/u/home/huangwei/mysw/pio2
+PIOPATH = /glade/u/apps/ch/opt/pio/2.2/mpt/2.15f/intel/17.0.1
 FFLAGS  = $(FCFLAGS) -I. -I$(PIOPATH)/include -I../ioapi_share -I../../frame -I../esmf_time_f90
-LIBS    = -L$(PIOPATH)/lib -lpio
+LIBS    = -L$(PIOPATH)/lib -lpiof -lpioc -lgptl
 #CPP1    = $(CPP) -P $(TRADFLAG) -DINTSPECIAL -D_PNETCDF -D_NETCDF4
 CPP1    = $(CPP) -P $(TRADFLAG) -D_PNETCDF -D_NETCDF4
 M4      = m4 -Uinclude -Uindex -Ulen
@@ -34,12 +34,12 @@ AR      = ar
 
 .SUFFIXES:      .F90 .f .o
 
-all : libwrfio_pio.a 
+all : libwrfio_pio2.a 
 
-libwrfio_pio.a:	$(OBJS) $(CODE)
-			/bin/rm -f libwrfio_pio.a
-			$(AR) cr libwrfio_pio.a $(OBJS)
-			$(RANLIB) libwrfio_pio.a
+libwrfio_pio2.a:	$(OBJS) $(CODE)
+			/bin/rm -f libwrfio_pio2.a
+			$(AR) cr libwrfio_pio2.a $(OBJS)
+			$(RANLIB) libwrfio_pio2.a
 
 wrf_data_pio.o:         wrf_data_pio.F90 $(CODE)
 			$(CPP1) -I. -I$(PIOPATH)/include -I../ioapi_share wrf_data_pio.F90 > wrf_data_pio.f
@@ -69,4 +69,4 @@ clean:	superclean
 
 superclean:
 			/bin/rm -f *.f *.o \
-			*.mod libwrfio_pio.a
+			*.mod libwrfio_pio2.a
