--- a/var/run/VARBC.in
+++ b/var/run/VARBC.in
@@ -1,5 +1,5 @@
   VARBC version 1.0 - Number of instruments: 
- 37
+ 38
  ------------------------------------------------
  Platform_id  Sat_id  Sensor_id  Nchanl  Npredmax
  ------------------------------------------------
@@ -2184,3 +2184,22 @@
    2     3  1  1  1  1  1 -1 -1 -1   3.628  -0.025   0.107   0.022   0.238
    3     4  1  1  1  1  1 -1 -1 -1  -0.443   0.329  -0.067  -0.454   0.448
    4     6  1  1  1  1  1 -1 -1 -1  -0.605   0.202  -0.073  -0.160   0.511
+ ------------------------------------------------
+ Platform_id  Sat_id  Sensor_id  Nchanl  Npredmax
+ ------------------------------------------------
+  4 16 44 10 8
+  -----> Bias predictor statistics:  Mean & Std & Nbgerr
+       1.0    9530.5    8287.5     297.4      41.0      41.4    1748.5   75128.1
+       0.0     141.9     183.8       5.4       9.8       5.7     473.1   29900.1
+     10000     10000     10000     10000     10000     10000     10000     10000
+  -----> Chanl_id Chanl_nb  Pred_use(-1/0/1)  Param
+   1     1  0  0  0  0  0 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   2     2  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   3     3  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   4     4  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   5     5  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   6     6  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   7     7  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   8     8  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+   9     9  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
+  10    10  1  1  1  1  1 -1 -1 -1   0.000   0.000   0.000   0.000   0.000
