Ignore many other files that seem to be auto-generated.
I don't feel like seeing notifications that I'm not paying attention
to files I haven't touched.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,26 @@
 configure.wrf*
 *.backup
 *.f90
+
+*.o
+*.a
+*.mod
+*.f90
+*.exe
+Registry_tmp.*
+configure.wrf*
+*.log
+in_use_for_config_*.inc
+Registry/Registry*
+namelist.input.backup.*
+
+
+*.patch
+*.orig
+*.rej
+*.bak
+*~
+\#*\#
+*.stackdump
+
+test/*/*
