Add module_stoch.o in Makefile

--- a/dyn_nmm/Makefile
+++ b/dyn_nmm/Makefile
@@ -24,6 +24,7 @@ MODULES =                 		\
 	module_TERRAIN.o                \
 	module_SMOOTH_TERRAIN.o         \
         module_PHYSICS_CALLS.o          \
+        module_stoch.o                  \
         module_IGWAVE_ADJUST.o          \
 	module_membrane_mslp.o		\
 	module_swath.o			\
