add an extra -s to CRTM clean-only makefile

--- a/var/external/crtm_2.3.0/makefile
+++ b/var/external/crtm_2.3.0/makefile
@@ -5,4 +5,4 @@ all :
 	@cd libsrc && $(MAKE) $@
 
 clean:
-	@cd libsrc && $(MAKE) -f makefile_clean $@
+	@cd libsrc && $(MAKE) -s -f makefile_clean $@
