Added capability to specify latitude in the namelist and have the ideal LES initialization executable (ideal.exe) compute corresponding Coriolis terms. Also added capability to output a subset of the WRF history file to an auxiliary output file (tsout*) to reduce output file sizes.

--- a/dyn_em/Makefile
+++ b/dyn_em/Makefile
@@ -26,6 +26,7 @@ MODULES =                 		\
 	module_sfs_driver.o		\
 	module_stoch.o			\
 	module_after_all_rk_steps.o	\
+        module_tsout.o                  \
 	$(CASE_MODULE)
 
 # possible CASE_MODULE settings
