--- a/phys/Makefile
+++ b/phys/Makefile
@@ -90,6 +90,8 @@ MODULES = \
 	module_mp_full_sbm.o \
 	module_mp_fast_sbm.o \
 	module_ltng_lpi.o \
+        module_ltng_pe.o \
+        module_ltng_strokes.o \
 	module_mp_gsfcgce.o \
 	module_mp_gsfcgce_4ice_nuwrf.o \
 	module_mp_morr_two_moment.o \
