--- a/phys/Makefile
+++ b/phys/Makefile
@@ -189,7 +189,8 @@ MODULES = \
 	module_fddaobs_driver.o \
 	module_wind_fitch.o \
 	module_sf_lake.o \
-	module_diagnostics_driver.o
+	module_diagnostics_driver.o\
+        module_irrigation_arianna.o
 
 FIRE_MODULES = \
         module_fr_fire_driver.o \
